[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-gateway"
version = "0.1.0"
description = "金融研究数据聚合网关 — 将 70+ 底层工具聚合为 ~10 个高层意图工具，支持权限隔离"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
research-gateway = "research_gateway.server:main"

[tool.hatch.build.targets.wheel]
packages = ["research_gateway"]
